--- a/index2.html
+++ b/index2.html
@@ -377,7 +377,7 @@
                     <div class="app-logo-icon" style="background: #4f91f2; color: white;">
                         <i class="fas fa-atom"></i>
                     </div>
-                    <h1 class="app-name" style="color: #4f91f2;">SCIENCE EXPLORER</h1>
+                    <h1 class="app-name" style="color: #4f91f2;">TETA SAINS</h1>
                 </div>
                 <div class="flex items-center space-x-3">
                     <i class="fas fa-search"></i>
@@ -435,7 +435,7 @@
         <span class="text-xs mt-1">Teori Fisika</span>
       </a>
 
-      <a href="surah/al-quran" class="flex flex-col items-center transition transform hover:scale-105 hover:text-green-600">
+      <a href="planet/bumi.html" class="flex flex-col items-center transition transform hover:scale-105 hover:text-green-600">
         <div class="achievement-badge bg-green-100 text-green-500 hover:bg-green-200 transition-colors p-3 rounded-full shadow-sm">
           <i class="fas fa-satellite text-xl"></i>
         </div>
@@ -620,3 +620,4 @@
     </script>
 </body>
 </html>
+
