--- a/profil.html
+++ b/profil.html
@@ -481,7 +481,7 @@
         
         <!-- Bottom Navigation -->
         <nav class="bottom-nav bg-white p-2 flex justify-around items-center">
-            <a href="index.html" class="flex flex-col items-center text-gray-500">
+            <a href="index2.html" class="flex flex-col items-center text-gray-500">
                 <i class="fas fa-home nav-icon text-xl active"></i>
                 <span class="text-xs mt-1">Beranda</span>
             </a>
@@ -589,3 +589,4 @@
 
 </body>
 </html>
+
