--- a/index2.html
+++ b/index2.html
@@ -464,11 +464,11 @@
         <span class="text-xs mt-1">Message</span>
       </a>
 
-      <a href="#" class="flex flex-col items-center transition transform hover:scale-105 hover:text-rose-600">
+      <a href="materi/biologi mokuler.html" class="flex flex-col items-center transition transform hover:scale-105 hover:text-rose-600">
         <div class="achievement-badge bg-rose-100 text-rose-500 hover:bg-rose-200 transition-colors p-3 rounded-full shadow-sm">
           <i class="fas fa-dna text-xl"></i>
         </div>
-        <span class="text-xs mt-1">Biologi Molekuler</span>
+        <span class="text-xs mt-1">Biologi</span>
       </a>
 
       <a href="#" class="flex flex-col items-center transition transform hover:scale-105 hover:text-amber-600">
@@ -621,4 +621,5 @@
     </script>
 </body>
 </html>
+
 
